<resources>
    <string name="app_name">"xBudget "</string>
    <string name="overflow_menu_settings">"Settings "</string>
    <string name="overflow_menu_about">About us</string>
    <string name="trans_fragment_title_incomes">"All Incomes "</string>
    <string name="trans_fragment_title_expenses">"All Expenses "</string>
    <string name="text_incomes_a1">" - ALL INCOMES TODAY "</string>
    <string name="text_incomes_b1">  % - COMP YESTERDAY </string>
    <string name="text_incomes_c1">  % - COMP DAILY AVERAGE </string>
    <string name="text_incomes_a2">  - ALL INCOMES THIS WEEK </string>
    <string name="text_incomes_b2">  % - COMP LAST WEEK </string>
    <string name="text_incomes_c2">  % - COMP WEEKLY AVERAGE </string>
    <string name="text_incomes_a3">  - ALL INCOMES THIS MONTH </string>
    <string name="text_incomes_b3">  % - COMP LAST MONTH </string>
    <string name="text_incomes_c3">  % - COMP MONTHLY AVERAGE </string>
    <string name="text_incomes_a4">  - ALL INCOMES THIS YEAR </string>
    <string name="text_incomes_b4">  % - COMP LAST YEAR </string>
    <string name="text_incomes_c4">  % - COMP YEARLY AVERAGE </string>
    <string name="text_incomes_a5">  - CATEGORY INCOMES TODAY </string>
    <string name="text_incomes_b5">  % - COMP YESTERDAY </string>
    <string name="text_incomes_c5">  % - COMP DAILY AVERAGE  </string>
    <string name="text_incomes_a6">  - CATEGORY INCOMES THIS WEEK </string>
    <string name="text_incomes_b6">  % - COMP LAST WEEK </string>
    <string name="text_incomes_c6">  % - COMP WEEKLY AVERAGE </string>
    <string name="text_incomes_a7">  - CATEGORY INCOMES THIS MONTH </string>
    <string name="text_incomes_b7">  % - COMP LAST MONTH </string>
    <string name="text_incomes_c7">  % - COMP MONTHLY AVERAGE </string>
    <string name="text_incomes_a8">  - CATEGORY INCOMES THIS YEAR </string>
    <string name="text_incomes_b8">  % - COMP LAST YEAR </string>
    <string name="text_incomes_c8">  % - COMP YEARLY AVERAGE </string>
    <string name="text_expenses_a1">  - ALL EXPENSES TODAY </string>
    <string name="text_expenses_b1">  % - COMP YESTERDAY </string>
    <string name="text_expenses_c1">  % - COMP DAILY AVERAGE </string>
    <string name="text_expenses_a2">  - ALL EXPENSES THIS WEEK </string>
    <string name="text_expenses_b2">  % - COMP LAST WEEK </string>
    <string name="text_expenses_c2">  % - COMP WEEKLY AVERAGE </string>
    <string name="text_expenses_a3">  - ALL EXPENSES THIS MONTH </string>
    <string name="text_expenses_b3">  % - COMP LAST MONTH </string>
    <string name="text_expenses_c3">  % - COMP MONTHLY AVERAGE </string>
    <string name="text_expenses_a4">  - ALL EXPENSES THIS YEAR </string>
    <string name="text_expenses_b4">  % - COMP LAST YEAR </string>
    <string name="text_expenses_c4">  % - COMP YEARLY AVERAGE </string>
    <string name="text_expenses_a5">  - CATEGORY EXPENSE TODAY </string>
    <string name="text_expenses_b5">  % - COMP YESTERDAY </string>
    <string name="text_expenses_c5">  % - COMP DAILY AVERAGE  </string>
    <string name="text_expenses_a6">  - CATEGORY EXPENSE THIS WEEK </string>
    <string name="text_expenses_b6">  % - COMP LAST WEEK </string>
    <string name="text_expenses_c6">  % - COMP WEEKLY AVERAGE </string>
    <string name="text_expenses_a7">  - CATEGORY EXPENSE THIS MONTH </string>
    <string name="text_expenses_b7">  % - COMP LAST MONTH </string>
    <string name="text_expenses_c7">  % - COMP MONTHLY AVERAGE </string>
    <string name="text_expenses_a8">  - CATEGORY EXPENSE THIS YEAR </string>
    <string name="text_expenses_b8">  % - COMP LAST YEAR </string>
    <string name="text_expenses_c8">  % - COMP YEARLY AVERAGE </string>
    <string name="text_savings_a1">  - SAVINGS THIS MONTH </string>
    <string name="text_savings_b1">  % - COMP LAST MONTH </string>
    <string name="text_savings_c1">  % - COMP MONTHLY AVERAGE </string>
    <string name="text_savings_a2" translatable="false">" "</string>
    <string name="text_savings_b2" translatable="false"> </string>
    <string name="text_savings_c2" translatable="false"> </string>
    <string name="text_savings_a3" translatable="false"> </string>
    <string name="text_savings_b3" translatable="false"> </string>
    <string name="text_savings_c3" translatable="false"> </string>
    <string name="text_savings_a4" translatable="false"> </string>
    <string name="text_savings_b4" translatable="false"> </string>
    <string name="text_savings_c4" translatable="false"> </string>
    <string name="text_savings_a5" translatable="false"> </string>
    <string name="text_savings_b5" translatable="false"> </string>
    <string name="text_savings_c5" translatable="false"> </string>
    <string name="text_savings_a6" translatable="false"> </string>
    <string name="text_savings_b6" translatable="false"> </string>
    <string name="text_savings_c6" translatable="false"> </string>
    <string name="text_savings_a7" translatable="false"> </string>
    <string name="text_savings_b7" translatable="false"> </string>
    <string name="text_savings_c7" translatable="false"> </string>
    <string name="text_savings_a8" translatable="false"> </string>
    <string name="text_savings_b8" translatable="false"> </string>
    <string name="text_savings_c8" translatable="false"> </string>
    <string name="dataview_incomes_no_data">"No income transactions on this month "</string>
    <string name="dataview_expenses_no_data">"No expense transactions on this month"</string>
    <string name="dataview_savings_no_data">"No savings on the selected month"</string>
    <string name="dataview_incomes_title">Incomes - Total by Category</string>
    <string name="dataview_expenses_title">Expenses - Total by Category</string>
    <string name="dataview_savings_title">Savings - Total by Month</string>
    <string name="dataview_incomes_label">Incomes</string>
    <string name="dataview_expenses_label">Expenses</string>
    <string name="dataview_savings_label">Savings</string>
    <string name="bottom_bar_transactions">Transactions</string>
    <string name="bottom_bar_statistics">Statistics</string>
    <string name="bottom_bar_dataview">DataView</string>
    <string name="activity_dataview_toolbar">DataView</string>
    <string name="tab_title_incomes">Incomes</string>
    <string name="tab_title_expenses">Expenses</string>
    <string name="tab_title_savings">Savings</string>
    <string name="statistics_transactions_title">All Transactions</string>
    <string name="statistics_category_title">Category:</string>
    <string name="dialog_trans_hint_trans_name">Transact. Name</string>
    <string name="dialog_trans_hint_amount">Amount</string>
    <string name="dialog_trans_cat_name">Category Name</string>
    <string name="dialog_trans_hint_cat_budget">Category Budget</string>
    <string name="dialog_trans_hint_cat_expected">Amount Expected</string>
    <string name="dialog_trans_hint_trans_descript">Description of this transaction</string>
    <string name="dialog_cat_category_name">Category Name:</string>
    <string name="dialog_cat_category_allowance">Category Allowance:</string>
    <string name="demo_income_cat_0">Salary</string>
    <string name="demo_income_cat_1">Tax Return</string>
    <string name="demo_income_cat_2">Online Business</string>
    <string name="demo_expense_cat_0">Rent / Mortgage</string>
    <string name="demo_expense_cat_1">Energy Suppliers</string>
    <string name="demo_expense_cat_2">Internet</string>
    <string name="demo_expense_cat_3">Grocery Shop</string>
    <string name="demo_expense_cat_4">Transport</string>
    <string name="dialog_trans_spinner_new_category">New Category</string>
    <string name="dialog_trans_toast_validName">Please input a valid name</string>
    <string name="dialog_trans_toast_validAmount">Please, insert a valid amount</string>
    <string name="dialog_trans_toast_bothFields">New Category - Please fill both fields</string>
    <string name="dialog_trans_toast_categoryExists">This category already exist</string>
    <string name="dialog_trans_toast_categoryBudget">Please, fill category budget</string>
    <string name="dialog_trans_title_updateIncomeTrans">Update Income Transaction</string>
    <string name="dialog_trans_title_newIncomeTrans">New Income Transaction</string>
    <string name="dialog_trans_title_updateExpenseTrans">Update Expense Transaction</string>
    <string name="dialog_trans_title_newExpenseTrans">New Expense Transaction</string>
    <string name="dialog_transaction_positive_add">add</string>
    <string name="dialog_positive_update">update</string>
    <string name="dialog_negativeButton">cancel</string>
    <string name="dialog_category_confirmation_msg1">This will delete all the transactions (</string>
    <string name="dialog_category_confirmation_msg2">) in this category</string>
    <string name="dialog_category_neutral_delete">Delete</string>
    <string name="fragment_trans_txt_totalSpent">Total Spent / Total Budgeted:</string>
    <string name="fragment_trans_txt_totalEarned" translatable="false">Total Earned / Total Expected:</string>
    <string name="stats_fragment_insertCategory">Insert a category</string>
    <string name="dataview_total_period">Total period:</string>
    <string name="text_dialog_about_paragraph1">"Thank you for downloading my application! I am a self-taught Android developer originally from Spain. This project was created to help people to improve their financial health. My aim on the designing of this application was to manage financial data in a simple, intuitive and graphical way, offering also options for those who need to have more details.  "</string>
    <string name="text_dialog_about_paragraph2">I would really appreciate if you take your time to submit any bug or improvement idea you may have :)</string>
    <string name="text_dialog_about_email_text">Email:</string>
    <string name="text_dialog_about_email_link" translatable="false">robin.maneiro@gmail.com</string>
    <string name="text_dialog_about_linkedin_text">LinkedIn:</string>
    <string name="text_dialog_about_linkedin_link" translatable="false"><a href="https://www.linkedin.com/in/robinmaneiro/">Robin Maneiro</a></string>
    <string name="dialog_aboutus_header_txt">Developed by Robin Maneiro</string>
    <string name="dialog_aboutus_bottom_txt">xBudget® 2021 - All Rights Reserved</string>
    <string name="dialog_cat_confirmation_title">Are you sure?</string>
    <string name="dialog_okbutton">OK</string>
    <string name="dialog_settings_currencySymbolChangeNotice">NOTE: This will change the currency symbol on the next start of the app</string>
    <string name="dialog_onboarding_skipBtn">SKIP</string>
    <string name="fragment_step_two_nextBtn"><![CDATA[NEXT >]]></string>
    <string name="dialog_onboarding_finishBtn">FINISH</string>
    <string name="fragment_step_one_welcome">Welcome to xBudget!</string>
    <string name="fragment_step_one_pointOne">For your convenience, some demo categories have been created</string>
    <string name="fragment_step_one_pointTwo">You can then edit or delete them, and also add more.</string>
    <string name="fragment_step_six_transByCat">Total Transactions by Category</string>
    <string name="fragment_step_six_pointOne">Monthly Transactions displayed by Category.</string>
    <string name="fragment_step_six_pointTwo">Below the graphic, you will show the monthly grand-total amount.</string>
    <string name="fragment_step_eight_newTransCat">New Transaction/Category</string>
    <string name="fragment_step_eight_pointOne">Add an Income Transaction by pressing</string>
    <string name="fragment_step_eight_pointTwo">Add an Expense Transaction by pressing</string>
    <string name="fragment_step_eight_pointThree">Select an existing category on the dropdown menu or select a New Category</string>
    <string name="fragment_step_eight_newIncomeExpense">Add a new Income or Expense Transaction</string>
</resources>