<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/fragment_step_one_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textStyle="bold" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <ImageView
        android:id="@+id/dot_column_0"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/default_dot" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerVertical="true"
        android:text="@string/fragment_step_one_pointOne"
        android:layout_toRightOf="@id/dot_column_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/dot_column_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/default_dot" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerVertical="true"
            android:text="@string/fragment_step_one_pointTwo"
            android:layout_toRightOf="@id/dot_column_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/dark_grey"
        android:fontFamily="@font/carter_one"
        android:text="@string/tab_title_incomes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dot_income_cat_0"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="111dp"
            android:src="@drawable/blue_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dot_income_cat_0"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/demo_income_cat_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dot_income_cat_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="111dp"
            android:src="@drawable/blue_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dot_income_cat_1"
            android:gravity="center"
            android:layout_marginLeft="5dp"

            android:text="@string/demo_income_cat_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dot_income_cat_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="111dp"
            android:src="@drawable/blue_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dot_income_cat_2"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/demo_income_cat_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tab_title_expenses"
        android:textColor="@color/dark_grey"
        android:fontFamily="@font/carter_one"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dot_expense_cat_0"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="111dp"
            android:src="@drawable/red_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dot_expense_cat_0"
            android:gravity="center"
            android:text="@string/demo_expense_cat_0"
            android:layout_marginLeft="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dot_expense_cat_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="111dp"
            android:src="@drawable/red_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dot_expense_cat_1"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/demo_expense_cat_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dot_expense_cat_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="111dp"
            android:src="@drawable/red_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dot_expense_cat_2"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/demo_expense_cat_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dot_expense_cat_3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="111dp"
            android:src="@drawable/red_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dot_expense_cat_3"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/demo_expense_cat_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dot_expense_cat_4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="111dp"
            android:src="@drawable/red_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dot_expense_cat_4"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/demo_expense_cat_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />
    </RelativeLayout>



</LinearLayout>
