<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/fragment_step_eight_newTransCat"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textStyle="bold" />

    <TextView
        android:layout_margin="5dp"
        android:textSize="15dp"
        android:textColor="@color/dark_grey"
        android:fontFamily="@font/carter_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/fragment_step_eight_newIncomeExpense" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/dot_column_0"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/default_dot" />

        <TextView
            android:id="@+id/add_new_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@id/dot_column_0"
            android:text="@string/fragment_step_eight_pointOne"
            android:textSize="13dp" />

        <ImageView
            android:id="@+id/pen_category_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/add_new_income"
            android:src="@drawable/ic_add_income"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dot_column_1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/default_dot" />

        <TextView
            android:id="@+id/add_new_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dot_column_1"
            android:text="@string/fragment_step_eight_pointTwo"
            android:textSize="13dp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/add_new_expense"
            android:src="@drawable/ic_add_expense"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dot_column_2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/default_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dot_column_2"
            android:text="@string/fragment_step_eight_pointThree"
            android:textSize="13dp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:src="@drawable/onboarding_transaction_expense" />

</LinearLayout>
